backend: changed route to get all classes with same school_id
