# routes/class.go
@@ -59,33 +59,33 @@ func GetClassHandler(c echo.Context) error {
 }
 
 // GetClassBySchoolHandler godoc
-// @Summary get one class by school_id
-// @Description get one class from db by school ID.
+// @Summary get classes by school_id
+// @Description get all classes from db by school ID.
 // @Tags class
 // @Accept application/json
 // @Produce json
 // @Param id path int true "School ID"
-// @Success 200 {object} model.Class
-// @Failure 400 {object} ErrorResponse "Ungültige Class-ID"
-// @Failure 404 {object} ErrorResponse "Class nicht gefunden"
+// @Success 200 {array} model.Class
+// @Failure 400 {object} ErrorResponse "Ungültige School-ID"
+// @Failure 404 {object} ErrorResponse "Klassen nicht gefunden"
 // @Router /classes/schools/:id [get]
 func GetClassBySchoolHandler(c echo.Context) error {
 	db := DB.GetDBInstance()
 
 	schoolID, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
-		return c.JSON(http.StatusBadRequest, map[string]string{"error": "Ungültige Class-ID"})
+		return c.JSON(http.StatusBadRequest, map[string]string{"error": "Ungültige School-ID"})
 	}
 
-	var class model.Class
-	if err := db.Model(&model.Class{}).Preload("Students").Where("school_id = ?", schoolID).First(&class).Error; err != nil {
+	var classes []model.Class
+	if err := db.Model(&model.Class{}).Preload("Students").Where("school_id = ?", schoolID).Find(&classes).Error; err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
-			return c.JSON(http.StatusNotFound, map[string]string{"error": "Class nicht gefunden"})
+			return c.JSON(http.StatusNotFound, map[string]string{"error": "Klassen nicht gefunden"})
 		}
 		return c.JSON(http.StatusInternalServerError, map[string]string{"error": "Internal Server Error"})
 	}
 
-	return c.JSON(http.StatusOK, class)
+	return c.JSON(http.StatusOK, classes)
 }
 
 // CreateClassHandler godoc
